restore part of docs